other-vpol/enforce-pod-duration/.kyverno-test-exceptions/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-lifetime-fail
  namespace: policy-exceptions
  annotations:
    pod.kubernetes.io/lifetime: 24h
spec:
  containers:
  - name: nginx
    image: nginx:1.12
