other-vpol/enforce-pod-duration/.kyverno-test-exceptions/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pod-lifetime-exceptions
policies:
- ../enforce-pod-duration.yaml
resources:
- resources.yaml
exceptions:
- ../.kyverno-test/exceptions.yaml
results:
- isValidatingPolicy: true
  kind: Pod
  policy: pod-lifetime
  resources:
  - policy-exceptions/test-lifetime-fail
  result: pass
